# camera_model

./: CMakeLists.txt  README.md
include/camera_calibration/: CalibrationPattern.h  CalibrationPatternDetector.h  CameraCalibration.h  CameraModelGenerator.h  CameraRemap.h  FrameRemapper.h  GeometricCameraCalibration.h  GeometricCameraModelCalibration.h  StereoCalibration.h  StereoCameraCalibration.h  StereoFrame.h  StereoRectification.h
include/camera_model/: CameraCalibration.h  CameraModel.h  DistortionModel.h  GeometricCameraModel.h  PhotometricCameraModel.h  PinholeCameraModel.h  ProjectionModel.h  ResponseBaseFunctions.h  StereoCameraModel.h
src/: CameraCalibration.cpp  GeometricCameraCalibration.cpp  GeometricCameraModelCalibration.cpp  StereoCalibration.cpp  StereoCameraCalibration.cpp
test/: CMakeLists.txt  CameraModelTest.cpp
